<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutologinActivity">

    <!-- Appbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:theme="@style/ToolbarTheme"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorWhite" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sdo_login_edit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingStart="10dp"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:hint="@string/your_sdo_login"
                android:fontFamily="@font/montserrat_regular"
                android:textColorHint="@color/colorBlack"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sdo_password_edit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingStart="10dp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/your_sdo_password"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="2dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <LinearLayout
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/alertHintAutoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorEditTextHint"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/alert_on_autologin"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/montserrat_regular"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/save_button"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_turn_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/montserrat_regular"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:visibility="gone"
                android:text="@string/button_turn_off"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_turn_on"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/montserrat_regular"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:visibility="gone"
                android:text="@string/button_turn_on"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


</androidx.constraintlayout.widget.ConstraintLayout>